test/tests/stages/13_floating-point_numbers/valid/libraries/extern_double.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[5]:
  double
  identifier(d)
  =
  const double(1e20)
  ;
