test/tests/stages/13_floating-point_numbers/invalid_types/extra_credit/bitwise_or.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(main)
  (
  void
  )
  {
  double
  identifier(d)
  =
  const double(0.0)
  |
  -
  const double(0.0)
  ;
  return
  const int(0)
  ;
  }
